# oxo-flow

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE-ACADEMIC  LICENSE-COMMERCIAL  LIMITATIONS.md  Makefile  PLAN-comprehensive.md  README.md  RELEASING.md  REPRODUCIBILITY.md  ROADMAP.md  SECURITY.md  TODO.md  TRADEMARK.md  cliff.toml  docker-compose.yml  test_debug.rs  test_modules.rs  test_wrap.rs
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/comparative/: README.md  run_comparison.sh
benches/macro/: run.sh  suite.py
crates/oxo-flow-cli/: Cargo.toml
crates/oxo-flow-cli/src/: main.rs
crates/oxo-flow-cli/src/commands/: batch.rs  clean.rs  cluster.rs  completions.rs  infra.rs  mod.rs  output.rs  project.rs  provenance.rs  publish.rs  quality.rs  run.rs  web.rs
crates/oxo-flow-core/: Cargo.toml
crates/oxo-flow-core/benches/: BENCHMARKS.md  api_response_bench.rs  core_bench.rs  dag_bench.rs  dag_scale_bench.rs  diagnostics_bench.rs  parsing_bench.rs  scheduling_bench.rs  wildcard_bench.rs  wildcard_large_bench.rs
crates/oxo-flow-core/src/: clinical.rs  cluster.rs  config.rs  container.rs  dag.rs  environment.rs  error.rs  executor.rs  format.rs  lib.rs  plugin.rs  report.rs  result.rs  rule.rs  scheduler.rs  webhook.rs  wildcard.rs
crates/oxo-flow-core/src/executor/: checkpoint.rs  hooks.rs  mod.rs  process.rs  security.rs  tests.rs  timeout.rs
crates/oxo-flow-core/src/storage/: gcs.rs  local.rs  mod.rs  s3.rs
crates/oxo-flow-web/: Cargo.toml
crates/oxo-flow-web/pipelines/: chipseq.oxoflow  generic.oxoflow  multiomics.oxoflow  qc.oxoflow  rnaseq.oxoflow  scatter-gather.oxoflow  single-cell.oxoflow  variant.oxoflow
crates/oxo-flow-web/src/: ai_provider.rs  audit.rs  db.rs  executor.rs  hpc.rs  lib.rs  main.rs  rate_limit.rs  server.rs  sse.rs  sys.rs  workspace.rs
crates/oxo-flow-web/src/domains/: mod.rs
crates/oxo-flow-web/src/domains/ai/: copilot.rs  handlers.rs  mod.rs  service.rs  types.rs
crates/oxo-flow-web/src/domains/ai/agents/: data_agent.rs  mod.rs  monitor_agent.rs  orchestrator.rs  report_agent.rs  search_agent.rs  tool_expert.rs  types.rs  validator_agent.rs
crates/oxo-flow-web/src/domains/auth/: handlers.rs  mod.rs  oauth.rs  service.rs  types.rs
crates/oxo-flow-web/src/domains/chat/: handlers.rs  mod.rs  service.rs  types.rs
crates/oxo-flow-web/src/domains/collaboration/: handlers.rs  mod.rs  service.rs  types.rs
crates/oxo-flow-web/src/domains/dag/: handlers.rs  mod.rs  service.rs  types.rs
crates/oxo-flow-web/src/domains/execution/: diagnostics.rs  handlers.rs  mod.rs  runner.rs  sandbox.rs  service.rs  types.rs
crates/oxo-flow-web/src/domains/observability/: handlers.rs  logging.rs  mod.rs  service.rs  types.rs
crates/oxo-flow-web/src/domains/workflow/: data.rs  handlers.rs  mod.rs  service.rs  types.rs
crates/oxo-flow-web/src/handlers/: ai.rs  auth.rs  mod.rs  partials.rs  reports.rs  runs.rs  saved.rs  scheduled.rs  system.rs  templates.rs  users.rs  workflow.rs
crates/oxo-flow-web/src/infra/: hpc.rs  license.rs  mod.rs  quota.rs  rate_limit.rs  sse.rs
crates/oxo-flow-web/src/infra/db/: mod.rs  models.rs  postgres.rs  sqlite.rs
crates/oxo-flow-web/src/templates/: auth.rs  dashboard.rs  mod.rs  partials.rs  runs.rs  workflow.rs
crates/oxo-flow-web/static/: app.js  index-Bo4cXux9.js  index-akIlVKkc.css  index.html  openapi.json
crates/oxo-flow-web/static/assets/: index-B8Hpqr31.css  index-BLVzLVl8.js  index-BzGLF8O9.js  index-CCVc6OLr.css  index-CLM7BjVy.js  index-CmUwz5Yz.js  index-D9j8BAlB.js  index-Djer6wbM.js  index-Hf5dXr86.js  index-rN16NT4s.css
crates/oxo-flow-web/tests/: ai_security.rs  phase1_integration.rs  phase2_ai_integration.rs  phase3_collaboration_integration.rs  phase4_v09_integration.rs  simulation_20users.rs
crates/venus/: Cargo.toml
crates/venus/src/: lib.rs  main.rs
docs/: CHANGE_CONTROL.md  CLUSTER_TESTING_REPORT.md  DEEP_INTEGRATION_TEST_REPORT.md  VALIDATION_PROTOCOL.md  index.html
docs/design/: COMPREHENSIVE_DEVELOPMENT_PLAN_20_PERSONAS.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CRITICAL_ISSUES_AND_PLAN.md  EXPERT_REVIEW_ADVANCED_USER.md  EXPERT_REVIEW_BIOINFORMATICS.md  EXPERT_REVIEW_CLINICAL.md  EXPERT_REVIEW_CLUSTER.md  EXPERT_REVIEW_CONTAINER.md  EXPERT_REVIEW_DEVOPS.md  EXPERT_REVIEW_JUNIOR_USER.md  EXPERT_REVIEW_VALIDATION.md  EXPERT_REVIEW_WEB_API.md  WEB_UI_SYSTEM.md
docs/guide/: mkdocs.yml
docs/schema/: openapi.yaml  oxoflow-v1.schema.json
docs/testing/: COMPREHENSIVE_TEST_SUITE.md
examples/: cohort_analysis.oxoflow  conditional_workflow.oxoflow  paired_experiment_control.oxoflow  paired_experiment_control_pairs.oxoflow  paired_tumor_normal.oxoflow  paired_tumor_normal_pairs.oxoflow  simple_variant_calling.oxoflow
examples/gallery/: 01_hello_world.oxoflow  02_file_pipeline.oxoflow  03_parallel_samples.oxoflow  04_scatter_gather.oxoflow  05_conda_environments.oxoflow  06_rnaseq_quantification.oxoflow  07_wgs_germline.oxoflow  08_multiomics_integration.oxoflow  09_single_cell_rnaseq.oxoflow  10_transform_operator.oxoflow
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: core-flows.spec.ts
frontend/public/: openapi.json
frontend/src/: App.tsx  index.css  main.tsx
pipelines/venus/: README.md  venus.oxoflow
src/: lib.rs
test-harness/: comprehensive_cluster_test.oxoflow  comprehensive_test.oxoflow  exported.toml  gpu_test.oxoflow  gpu_test_fixed.oxoflow  optional_test.oxoflow  rnaseq_gpu_pipeline.oxoflow  scatter_test.oxoflow  scrnaseq_pipeline.oxoflow  test_inline.oxoflow  test_report.html  test_simple.oxoflow  wgs_variant_calling_pipeline.oxoflow
test-harness/data/: samples.txt
test-harness/dep-test/: deep_learning.sh  gpu_variant_calling.sh  submit.sh
test-harness/gpu-slurm/: gpu_task.sh
tests/: cli_integration.rs  integration_test.rs
(+171 files in other folders)
