[package]
name = "oxo-flow-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for the oxo-flow bioinformatics pipeline engine"

[[bin]]
name = "oxo-flow"
path = "src/main.rs"

[dependencies]
oxo-flow-core = { workspace = true }
oxo-flow-web = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
filetime = "0.2.29"
sysinfo = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
