[package]
name = "oxo-flow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for the oxo-flow bioinformatics pipeline engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
petgraph = { workspace = true }
globset = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
tera = { workspace = true }
num_cpus = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "wildcard_bench"
harness = false
