[package]
name = "oxo-flow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for the oxo-flow bioinformatics pipeline engine"

[features]
default = ["container", "webhook", "report", "cluster"]
# Cloud storage backends (opt-in)
s3-storage = ["aws-sdk-s3", "dep:aws-config"]
gcs-storage = ["dep:hmac", "dep:sha1", "dep:base64", "dep:md-5"]
# Optional modules - compile-time feature gates for minimal builds
container = []
webhook = []
report = []
cluster = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
petgraph = { workspace = true }
globset = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
tera = { workspace = true }
num_cpus = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
hex = { workspace = true }
tempfile = { workspace = true }
csv = "1.4.0"
async-trait = { workspace = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
hmac = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
md-5 = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "wildcard_bench"
harness = false

[[bench]]
name = "core_bench"
harness = false
