[package]
name = "oxo-flow-web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web interface for the oxo-flow bioinformatics pipeline engine"

[dependencies]
oxo-flow-core = { path = "../oxo-flow-core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
