[package]
name = "oxo-flow-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "../../LICENSE-ACADEMIC"
repository.workspace = true
homepage.workspace = true
description = "Web interface for the oxo-flow bioinformatics pipeline engine"

[[bin]]
name = "oxo-flow-web"
path = "src/main.rs"

[dependencies]
oxo-flow-core = { workspace = true }
oxo-license = "0.1.1"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
dashmap = "6.1.0"
