[package]
name = "venus"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Venus: clinical-grade tumor variant detection pipeline built on oxo-flow"

[dependencies]
oxo-flow-core = { path = "../oxo-flow-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
