[package]
name = "venus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Venus: clinical-grade tumor variant detection pipeline built on oxo-flow"

[[bin]]
name = "venus"
path = "src/main.rs"

[dependencies]
oxo-flow-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
